<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android"
    android:title="Settings">

    <SwitchPreference
        android:defaultValue="@string/settings_not_for_sale_default"
        android:key="@string/settings_not_for_sale_key"
        android:summary="@string/settings_not_for_sale_summary"
        android:title="@string/settings_not_for_sale_label"
        android:background="@color/colorAccent"/>

    <EditTextPreference
        android:defaultValue="@string/settings_max_results_default"
        android:inputType="numberDecimal"
        android:key="@string/settings_max_results_key"
        android:selectAllOnFocus="true"
        android:textColor="@color/colorPrimaryDark"
        android:textCursorDrawable="@color/colorPrimary"
        android:summary="@string/settings_max_results_summary"
        android:title="@string/settings_max_results_label" />


</PreferenceScreen>